# llm-translator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  db.sqlite3.example  docker-compose.ollama.yml  docker-compose.proxy.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: settings.py  urls.py
translate/: urls.py  views.py
translate/templates/: index.html
