[tool.poetry]
name = "llm-translator"
version = "0.1.0"
description = ""
authors = ["Drixler Angelo <drixler97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "~5.0.3"
python-dotenv = "~1.0.1"
langchain = "~0.1.12"
langchain-openai = "~0.0.8"
langchain-google-genai = "~0.0.11"
langchain-community = "^0.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
